--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,13 @@ ol {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
+}
+@media screen and (max-width: 574px) {
+  img {
+    margin: 0 auto;
+  }
 }
 
 body {
@@ -1125,29 +1130,117 @@ body {
 
 /* Pricing section */
 .pricing-list-heading {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   line-height: 1.6;
-  font-size: 30px;
   color: var(--secondary-text-color);
+  font-size: 18px;
+  margin-top: 28px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 575px) {
+  .pricing-list-heading {
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 21px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .pricing-list-heading {
+    font-size: 22px;
+    margin-top: 23px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .pricing-list-heading {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
 }
 
-.pricing-list-item {
-  width: 426px;
+.pricing__text {
+  font-size: 13px;
+}
+@media screen and (min-width: 575px) {
+  .pricing__text {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .pricing__text {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 574px) {
+  .pricing-list-item {
+    margin-bottom: 63px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .pricing-list-item {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 282px;
+    text-align: center;
+    margin-bottom: 71px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .pricing-list-item {
+    -ms-flex-preferred-size: calc((100% - 72px) / 3);
+        flex-basis: calc((100% - 72px) / 3);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .pricing-list-item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .pricing-per-month {
-  width: 108px;
-  font-size: 18px;
   color: #546269;
+  font-size: 14px;
+}
+@media screen and (min-width: 575px) {
+  .pricing-per-month {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .pricing-per-month {
+    width: 108px;
+    font-size: 18px;
+  }
 }
 
-.pricing-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .pricing-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
-.pricing-list-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .pricing-list-item:not(:last-child) {
+    margin-right: 36px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .pricing-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .pricing-picture {
@@ -1161,27 +1254,123 @@ body {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-  padding: 5px 23px 4px 29px;
-  width: 260px;
-  height: 45px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 170px;
+  height: 37px;
+  padding: 5px 15px 5px 15px;
   border-radius: 5px;
   background-color: #eeeeee;
 }
+@media screen and (min-width: 575px) {
+  .price {
+    width: 205px;
+    height: 45px;
+    padding: 5px 12px 5px 12px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .price {
+    width: 205px;
+    padding: 6px 17px 6px 17px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .price {
+    padding: 5px 23px 4px 29px;
+    width: 260px;
+  }
+}
 
 .price > .price-item {
-  width: 76px;
-  margin-right: 28px;
-  font-size: 24px;
   text-align: center;
   color: var(--secondary-text-color);
+  font-size: 18px;
+}
+@media screen and (min-width: 575px) {
+  .price > .price-item {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .price > .price-item {
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .price > .price-item {
+    width: 76px;
+    font-size: 24px;
+  }
 }
 
-.self-study-price {
-  margin-top: 30px;
+@media screen and (max-width: 574px) {
+  .self-study-price {
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 575px) {
+  .self-study-price {
+    margin-top: 31px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .self-study-price {
+    margin-top: 28px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .self-study-price {
+    margin-top: 30px;
+  }
 }
 
-.live-and-personal {
-  margin-top: 60px;
+.price__wrapper {
+  position: relative;
+}
+@media screen and (min-width: 768px) {
+  .price__wrapper {
+    height: 210px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .price__wrapper {
+    height: 320px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .price__wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: center;
+       object-position: center;
+  }
+}
+
+@media screen and (max-width: 574px) {
+  .live-and-personal {
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 575px) {
+  .live-and-personal {
+    margin-top: 31px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .live-and-personal {
+    margin-top: 49px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .live-and-personal {
+    margin-top: 60px;
+  }
 }
 
 /* Contact us */
