--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1261,49 +1261,201 @@ body {
 /* Contact us */
 
 .contact-us-thumb {
-  display: flex;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .contact-data {
-  margin-left: 145px;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 36px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    margin-left: 145px;
+  }
 }
 
 .contact-us-description {
-  margin-bottom: 30px;
-  width: 654px;
+  font-size: 14px;
+
+  @media screen and (max-width: 574px) {
+    margin-bottom: 31px;
+  }
+
+  @media screen and (min-width: 575px) {
+    font-size: 16px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    margin-bottom: 26px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    font-size: 20px;
+    margin-bottom: 30px;
+    width: 654px;
+  }
 }
 
 .subscribe-button {
   display: inline-block;
   font-weight: 500;
-  font-size: 20px;
+  width: 100%;
+  height: 60px;
+  border-radius: 5px;
+
+  font-size: 14px;
   color: #ffffff;
   background-color: var(--secondary-text-color);
-  border-radius: 10px;
   cursor: pointer;
 
-  padding: 21.5px 104px;
-  margin-left: 30px;
-
   transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 575px) {
+    width: 193px;
+
+    margin-left: 15px;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1377px) {
+    width: 145px;
+    height: 50px;
+
+    margin-left: 6px;
+    font-size: 13px;
+    border-radius: 5px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    width: 312px;
+    height: 70px;
+    margin-left: 30px;
+    font-size: 20px;
+    border-radius: 10px;
+  }
 }
 
 .form {
   display: inline-block;
-  font-size: 20px;
+  width: 100%;
+  height: 50px;
+
   line-height: 1.88;
   color: var(--main-text-color);
   border: 1px solid #8f95a5;
-  border-radius: 10px;
+  border-radius: 5px;
+  padding-left: 26px;
+  padding-right: 26px;
 
-  padding-left: 30px;
+  font-size: 14px;
 
-  width: 420px;
-  height: 70px;
+  @media screen and (max-width: 574px) {
+    margin-bottom: 17px;
+  }
+
+  @media screen and (min-width: 575px) {
+    font-size: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 60px;
+    width: 305px;
+    border-radius: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    padding-left: 24px;
+    padding-right: 24px;
+    height: 50px;
+    width: 283px;
+    border-radius: 5px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    font-size: 22px;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    width: 420px;
+    height: 70px;
+    border-radius: 10px;
+  }
 }
 
 .contact-section {
   padding-bottom: 55px;
+}
+
+.contact__wrapper {
+  position: relative;
+  height: 228px;
+  width: 100%;
+
+  @media screen and (max-width: 574px) {
+    max-width: 253px;
+    margin-bottom: 38px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 575px) and (max-width: 767px) {
+    height: 322px;
+    margin-bottom: 34px;
+    max-width: 358px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 210px;
+    max-width: 233px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    height: 430px;
+    max-width: 425px;
+  }
+}
+
+.contact__heading {
+  @media screen and (max-width: 574px) {
+    margin-bottom: 70px;
+  }
+
+  @media screen and (min-width: 575px) and (max-width: 767px) {
+    margin-bottom: 83px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1377px) {
+    margin-bottom: 27px;
+  }
+}
+
+.contact__wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  object-position: center;
+
+  width: 100%;
 }
 
 /* Footer section */
@@ -1340,7 +1492,9 @@ body {
 }
 
 .footer-form {
-  display: flex;
+  @media screen and (min-width: 575px) {
+    display: flex;
+  }
 }
 
 .bulb-icon {
@@ -1356,35 +1510,96 @@ body {
 
 .form__text {
   position: absolute;
-  left: 30px;
-  top: 50%;
-  transform: translateY(-50%);
+  left: 26px;
 
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.88;
   cursor: text;
 
   transition: transform 800ms cubic-bezier(0.4, 0, 0.2, 1),
     font-size 800ms cubic-bezier(0.4, 0, 0.2, 1),
     line-height 800ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 574px) {
+    width: 103px;
+    top: 6px;
+  }
+
+  @media screen and (min-width: 575px) {
+    left: 25px;
+    font-size: 13px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  @media screen and (min-width: 768px) {
+    left: 24px;
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    left: 30px;
+    font-size: 16px;
+  }
 }
 
 .form:focus + .form__text,
 .form:not(:placeholder-shown) + .form__text {
-  transform: translate(-30px, -70px);
-
-  font-size: 20px;
+  font-size: 14px;
   line-height: 1.5;
   color: #263238;
+
+  @media screen and (max-width: 574px) {
+    width: 200px;
+    transform: translate(-65px, -50px);
+  }
+
+  @media screen and (min-width: 575px) {
+    font-size: 14px;
+    transform: translate(-25px, -60px);
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    transform: translate(-25px, -50px);
+  }
+
+  @media screen and (min-width: 1378px) {
+    font-size: 20px;
+    transform: translate(-30px, -70px);
+  }
 }
 
 .form__icon {
   position: absolute;
-  right: 30px;
-  top: 50%;
-  transform: translateY(-50%);
+  right: 20px;
 
   @include transition(opacity);
+
+  @media screen and (max-width: 574px) {
+    top: 7px;
+    right: -270px;
+    width: 20px;
+    height: 20px;
+  }
+
+  @media screen and (min-width: 575px) {
+    top: 50%;
+    transform: translateY(-50%);
+    width: 22px;
+    height: 22px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1377px) {
+    width: 22px;
+    height: 22px;
+    right: 25px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .icon-attention,
@@ -1404,8 +1619,26 @@ body {
   font-size: 14px;
   line-height: 1.5;
   letter-spacing: 0.03em;
+  text-align: start;
 
   @include transition(opacity);
+
+  @media screen and (max-width: 574px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 575px) {
+    display: inline-block;
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 10px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    font-size: 14px;
+  }
 }
 
 .form-example {
