--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1338,7 +1338,7 @@ body {
     width: 145px;
     height: 50px;
 
-    margin-left: 6px;
+    margin-left: auto;
     font-size: 13px;
     border-radius: 5px;
   }
@@ -1460,16 +1460,69 @@ body {
 
 /* Footer section */
 
+.footer-thumb {
+  @media screen and (max-width: 574px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 575px) {
+    display: flex;
+    align-items: center;
+  }
+}
+
 .footer-list-link {
-  font-size: 24px;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  font-size: 11px;
 
-  padding: 31px 0;
+  @media screen and (min-width: 575px) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 13px;
+  }
+
+  @media screen and (min-width: 1378px) {
+    font-size: 24px;
+    padding: 31px 0;
+  }
+}
+
+.footer-list-item {
+  @media screen and (max-width: 1377px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .footer-list-item:not(:last-child) {
-  margin-right: 80px;
+  @media screen and (min-width: 1378px) {
+    margin-right: 80px;
+  }
+}
+
+.footer-list-item:not(:last-child)::after {
+  margin: 0 1.5px 0 1.5px;
+
+  @media screen and (min-width: 575px) {
+    margin: 0 5px 0 5px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 0 6px 0 6px;
+  }
+
+  @media screen and (max-width: 1377px) {
+    content: " ";
+    display: inline-block;
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: var(--main-text-color);
+  }
 }
 
 .footer {
@@ -1479,16 +1532,30 @@ body {
 
 .footer-list {
   display: flex;
-  margin-left: auto;
-}
 
-.footer-thumb {
-  display: flex;
-  align-items: center;
+  @media screen and (min-width: 575px) {
+    margin-left: auto;
+  }
 }
 
 .logo-footer {
-  padding: 22px 0;
+  padding: 26px 0 15px 0;
+  display: inline-block;
+  font-size: 24px;
+
+  @media screen and (min-width: 575px) {
+    padding: 24px 0 26px 0;
+    font-size: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 18px 0 15px 0;
+  }
+
+  @media screen and (min-width: 1378px) {
+    padding: 22px 0;
+    font-size: 36px;
+  }
 }
 
 .footer-form {
