--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,9 @@ body {
   line-height: 1.5;
   color: var(--main-text-color);
 }
+body.modal-open {
+  overflow: hidden;
+}
 @media screen and (max-width: 1377px) {
   body.menu-open {
     overflow: hidden;
@@ -58,7 +61,6 @@ body {
   min-width: 320px;
   max-width: 320px;
   padding: 0 15px;
-  outline: solid 2px tomato;
 }
 @media screen and (min-width: 575px) {
   .container {
@@ -1990,4 +1992,295 @@ body {
 .form:focus:valid ~ .form__icon .icon-success,
 .form:valid:not(:placeholder-shown) ~ .form__icon .icon-success {
   opacity: 1;
+}
+
+.to-top--position {
+  position: fixed;
+  bottom: 40px;
+  right: 25px;
+  z-index: 20;
+}
+@media screen and (min-width: 768px) {
+  .to-top--position {
+    bottom: 60px;
+    right: 4%;
+  }
+}
+
+@-webkit-keyframes movebtn {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    opacity: 1;
+  }
+}
+
+@keyframes movebtn {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    opacity: 1;
+  }
+}
+.to-top--style {
+  visibility: hidden;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: decimal-round(0.64);
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  cursor: pointer;
+  background-color: white;
+  -webkit-box-shadow: 3px 7px 17px 0px rgba(127, 65, 79, 0.15);
+          box-shadow: 3px 7px 17px 0px rgba(127, 65, 79, 0.15);
+  border: none;
+  border-radius: 40%;
+  height: 35px;
+  width: 35px;
+  -webkit-animation: movebtn 2s ease-in-out infinite alternate both;
+          animation: movebtn 2s ease-in-out infinite alternate both;
+  -webkit-transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.to-top--style:hover, .to-top--style:focus {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+  color: var(--heading-color);
+  background-color: white;
+  opacity: 1;
+}
+@media screen and (min-width: 768px) {
+  .to-top--style {
+    width: 40px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: decimal-round(0.4571428571);
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .to-top--style {
+    width: 75px;
+    height: 75px;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: decimal-round(0.32);
+    letter-spacing: 0.03em;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.about-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 30px;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  background-color: var(--background-color);
+  -webkit-transition: -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .about-modal {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about-modal {
+    max-width: 500px;
+    min-height: 500px;
+  }
+}
+.about-modal__close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--main-text-color);
+  fill: var(--background-color);
+  cursor: pointer;
+  -webkit-transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.about-modal__close-btn:hover, .about-modal__close-btn:focus {
+  fill: var(--heading-color);
+}
+.about-modal__title {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: var(--heading-color);
+}
+@media screen and (min-width: 768px) {
+  .about-modal__title {
+    margin-bottom: 30px;
+  }
+}
+.about-modal__text {
+  margin-bottom: 15px;
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: decimal-round(1.7857142857);
+  letter-spacing: 0em;
+  color: var(--secondary-text-color);
+}
+@media screen and (min-width: 768px) {
+  .about-modal__text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: decimal-round(1.75);
+    letter-spacing: 0em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about-modal__text {
+    margin-bottom: 30px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: decimal-round(1.6666666667);
+    letter-spacing: 0em;
+  }
+}
+.about-modal__form-text {
+  color: var(--heading-color);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: decimal-round(1.3888888889);
+  letter-spacing: 0em;
+}
+.about-modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.blank__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 20px;
+  margin-top: 50px;
+}
+
+.blank {
+  width: 100%;
+}
+
+.blank__field:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 50px;
+}
+@media screen and (min-width: 1378px) {
+  .form__btn {
+    height: 60px;
+    font-size: 30px;
+  }
+}
+
+.about-modal__form {
+  height: 30px;
+  margin-top: 5px;
+  border: 1px solid #8f95a5;
+  border-radius: 5px;
+  padding: 5px 15px;
+}
+@media screen and (min-width: 1378px) {
+  .about-modal__form {
+    height: 40px;
+    margin-top: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
