--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -9,6 +9,13 @@
   --heading-color: #000000;
 }
 
+@mixin fonts($fw: 400, $fs: 14, $lh: 16, $ls: 0.03) {
+  font-weight: #{$fw};
+  font-size: #{$fs}px;
+  line-height: decimal-round(calc($lh/ $fs));
+  letter-spacing: #{$ls}em;
+}
+
 .link {
   text-decoration: none;
 }
@@ -44,6 +51,10 @@ body {
   line-height: 1.5;
   color: var(--main-text-color);
 
+  &.modal-open {
+    overflow: hidden;
+  }
+
   @media screen and (max-width: 1377px) {
     &.menu-open {
       overflow: hidden;
@@ -58,7 +69,7 @@ body {
   min-width: 320px;
   max-width: 320px;
   padding: 0 15px;
-  outline: solid 2px tomato;
+  // outline: solid 2px tomato;
 
   @media screen and (min-width: 575px) {
     max-width: 575px;
@@ -1743,4 +1754,235 @@ body {
 .form:focus:valid ~ .form__icon .icon-success,
 .form:valid:not(:placeholder-shown) ~ .form__icon .icon-success {
   opacity: 1;
+}
+
+.to-top--position {
+  position: fixed;
+  bottom: 40px;
+  right: 25px;
+  z-index: 20;
+
+  @media screen and (min-width: 768px) {
+    bottom: 60px;
+    right: 4%;
+  }
+}
+
+@keyframes movebtn {
+  0% {
+    transform: translateY(0px);
+    opacity: 0.8;
+  }
+
+  100% {
+    transform: translateY(-50px);
+    opacity: 1;
+  }
+}
+
+.to-top--style {
+  visibility: hidden;
+
+  @include fonts(500, 25);
+  color: var(--main-text-color);
+  cursor: pointer;
+  background-color: white;
+  box-shadow: 3px 7px 17px 0px rgb(127 65 79 / 15%);
+  border: none;
+  border-radius: 40%;
+  height: 35px;
+  width: 35px;
+
+  animation: movebtn 2s ease-in-out infinite alternate both;
+  transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    animation-play-state: paused;
+    color: var(--heading-color);
+    background-color: white;
+    opacity: 1;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 40px;
+    height: 40px;
+
+    @include fonts(500, 35);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 75px;
+    height: 75px;
+
+    @include fonts(500, 50);
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+
+  width: 100vw;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  visibility: visible;
+
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  overflow: auto;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.about-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 30px;
+
+  width: calc(100% - 15px * 2);
+  max-width: 450px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  background-color: var(--background-color);
+
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    max-width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 500px;
+    min-height: 500px;
+  }
+
+  &__close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50px;
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--main-text-color);
+    fill: var(--background-color);
+    cursor: pointer;
+
+    transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__close-btn:hover,
+  &__close-btn:focus {
+    fill: var(--heading-color);
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: var(--heading-color);
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__text {
+    margin-bottom: 15px;
+    position: relative;
+
+    @include fonts(500, 14, 25, 0);
+    color: var(--secondary-text-color);
+
+    @media screen and (min-width: 768px) {
+      @include fonts(500, 16, 28, 0);
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 30px;
+      @include fonts(500, 18, 30, 0);
+    }
+  }
+
+  &__form-text {
+    color: var(--heading-color);
+    @include fonts(500, 18, 25, 0);
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.blank__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+
+  margin-top: 50px;
+}
+
+.blank {
+  width: 100%;
+}
+
+.blank__field {
+  &:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
+.form__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+
+  @media screen and (min-width: 1378px) {
+    height: 60px;
+    font-size: 30px;
+  }
+}
+
+.about-modal__form {
+  height: 30px;
+  margin-top: 5px;
+  border: 1px solid #8f95a5;
+  border-radius: 5px;
+
+  padding: 5px 15px;
+
+  @media screen and (min-width: 1378px) {
+    height: 40px;
+    margin-top: 10px;
+  }
 }
